compiler/framework/test/fail/arraytype.cvc
// Should produce a type checking error for mixing types in an array.


export int main() {
    int[4] a = [1, 2, 3.0, 4];
    return 0;
}
